<resources>
    <string name="app_name">photo-viewer-android</string>
    <string name="photo">photo</string>
    <string name="icon">icon</string>
    <string name="retry">retry</string>
    <string name="popular">Popular</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
    <string name="linear">Linear</string>
    <string name="grid">Grid</string>
    <string name="top_tab_photo">Photo</string>
    <string name="top_tab_collection">Collection</string>
    <string name="search">Search</string>
    <string name="tags">Tags</string>
    <string name="posted">Posted</string>
    <string name="liked">Liked</string>
    <string name="search_photos">Search Photos</string>
    <string name="related_collections">Related Collections</string>
    <string name="login_request_message">Please login</string>
    <string name="login_progress_message">Please wait. Login in progress.</string>
    <string name="login_success_message">Login Succeeded. Please retry your action.</string>
    <string name="login_failure_message">Login Failed</string>
    <string name="account_fetch_failure">Failed to fetch your account info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">UPDATE</string>
    <string name="logout">LOGOUT</string>
    <string name="name">name</string>
    <string name="location">location</string>
    <string name="bio">bio</string>
    <string name="user_detail_loading_message">Please wait a moment. Loading user data.</string>
    <string name="update_thumbnail_not_supported_message">Sorry, API does not support to update images</string>
    <string name="logout_message">Logout is completed. Restart app</string>
    <string name="like_without_login_message">Please login to like a photo.</string>
    <plurals name="photos">
        <item quantity="one">%d photo</item>
        <item quantity="other">%d photos</item>
    </plurals>
    <plurals name="likes">
        <item quantity="one">%d like</item>
        <item quantity="other">%d likes</item>
    </plurals>
    <plurals name="downloads">
        <item quantity="one">%d download</item>
        <item quantity="other">%d downloads</item>
    </plurals>
    <plurals name="follows">
        <item quantity="one">%d follow</item>
        <item quantity="other">%d follows</item>
    </plurals>
    <plurals name="followers">
        <item quantity="one">%d follower</item>
        <item quantity="other">%d followers</item>
    </plurals>
    <string name="no_description">No Description</string>
</resources>
