<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.ishikota.photoviewerandroid.data.api.entities.User" />

        <variable
            name="viewModel"
            type="com.ishikota.photoviewerandroid.ui.editprofile.EditProfileViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/AppTheme.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:contentInsetStart="0dp"
            android:contentInsetLeft="0dp"
            android:contentInsetEnd="0dp"
            android:contentInsetRight="0dp"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetEnd="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetStart="0dp"
            app:layout_collapseMode="pin"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways" />

        <ImageView
            android:id="@+id/user_thumbnail"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/photo"
            app:clipToCircle="@{true}"
            app:imageFromUrl="@{user.profileImage.medium}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:src="@tools:sample/avatars" />

        <EditText
            android:id="@+id/text_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@{user.firstName}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/text_last_name"
            app:layout_constraintTop_toBottomOf="@id/user_thumbnail"
            app:layout_constraintHorizontal_chainStyle="packed"
            tools:ignore="Autofill"
            tools:text="Zhennya" />

        <EditText
            android:id="@+id/text_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/name"
            android:inputType="text"
            android:text="@{user.lastName}"
            app:layout_constraintLeft_toRightOf="@id/text_first_name"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_thumbnail"
            tools:ignore="Autofill"
            tools:text="Rynska" />

        <EditText
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/location"
            android:inputType="text"
            android:text="@{user.location}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_first_name"
            tools:ignore="Autofill"
            tools:text="Krakow" />

        <EditText
            android:id="@+id/bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/bio"
            android:inputType="textMultiLine"
            android:text="@{user.bio}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_location"
            tools:ignore="Autofill"
            tools:layout_height="100dp"
            tools:text="@tools:sample/lorem/random" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleWhen="@{viewModel.isLoading()}"
            tools:visibility="visible" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
