<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="user"
            type="com.ishikota.photoviewerandroid.data.api.entities.User" />

        <variable
            name="viewModel"
            type="com.ishikota.photoviewerandroid.ui.userdetail.UserDetailViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="?attr/actionBarSize"
        app:layout_collapseMode="parallax">

        <ImageView
            android:id="@+id/user_thumbnail"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/photo"
            android:layout_marginTop="16dp"
            app:clipToCircle="@{true}"
            app:imageFromUrl="@{user.profileImage.large}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/text_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@{user.name}"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_thumbnail"
            tools:text="Zhennya Rynska" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{user.location}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_user_name"
            tools:text="Krakow" />

        <TextView
            android:id="@+id/bio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@{user.bio}"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_location"
            tools:layout_height="100dp"
            tools:text="@tools:sample/lorem/random" />

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="72dp"
            android:layout_marginTop="24dp"
            android:background="#55000000"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bio" />

        <ImageView
            android:id="@+id/ic_like"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_favorite_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@id/divider" />

        <TextView
            android:id="@+id/text_like"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:userDetailStatsStr="@{@plurals/likes(user.totalLikes, user.totalLikes)}"
            app:layout_constraintBottom_toBottomOf="@id/ic_like"
            app:layout_constraintLeft_toRightOf="@id/ic_like"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/ic_like"
            tools:text="54 likes" />

        <ImageView
            android:id="@+id/ic_download"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_file_download_black_24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ic_like" />

        <TextView
            android:id="@+id/text_download"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:userDetailStatsStr="@{@plurals/downloads(user.downloads ?? 0, user.downloads ?? 0)}"
            app:layout_constraintBottom_toBottomOf="@id/ic_download"
            app:layout_constraintLeft_toRightOf="@id/ic_download"
            app:layout_constraintRight_toLeftOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/ic_download"
            tools:text="54 downloads" />

        <ImageView
            android:id="@+id/ic_follows"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_share_black_24dp"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintTop_toTopOf="@id/divider" />

        <TextView
            android:id="@+id/text_follows"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:userDetailStatsStr="@{@plurals/follows(user.followingCount ?? 0, user.followingCount ?? 0)}"
            app:layout_constraintBottom_toBottomOf="@id/ic_follows"
            app:layout_constraintLeft_toRightOf="@id/ic_follows"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_follows"
            tools:text="54 follows" />

        <ImageView
            android:id="@+id/ic_followers"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/ic_share_black_24dp"
            app:layout_constraintLeft_toRightOf="@id/divider"
            app:layout_constraintTop_toBottomOf="@id/ic_follows" />

        <TextView
            android:id="@+id/text_followers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:userDetailStatsStr="@{@plurals/followers(user.followersCount ?? 0, user.followersCount ?? 0)}"
            app:layout_constraintBottom_toBottomOf="@id/ic_followers"
            app:layout_constraintLeft_toRightOf="@id/ic_followers"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/ic_followers"
            tools:text="54 followers" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleWhen="@{viewModel.isLoading()}"
            tools:visibility="visible" />

        <Button
            android:id="@+id/retry_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:visibleWhen="@{viewModel.isError()}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
